Add Android support

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ console_scripts =
 grizzly_adapters =
     no-op = grizzly.adapter.no_op_adapter:NoOpAdapter
 grizzly_targets =
+    adb = grizzly.target.adb_target:ADBTarget
     ffpuppet = grizzly.target.puppet_target:PuppetTarget
 grizzly_reduce_strategies =
     attrs = grizzly.reduce.strategies.lithium:MinimizeAttrs
