--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,11 @@ matrix:
   allow_failures:
     - os: linux
       python: 3.5
+    - os: linux
       python: 3.6
+    - os: linux
       python: 3.7
+    - os: linux
       python: 3.8-dev
     - os: osx
       python: 3.7
