Install ffpuppet from PyPI

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,12 +37,6 @@ matrix:
         - python -m pip install --upgrade pip wheel
   allow_failures:
     - os: linux
-      python: 3.5
-    - os: linux
-      python: 3.6
-    - os: linux
-      python: 3.7
-    - os: linux
       python: 3.8-dev
     - os: osx
       python: 3.7
@@ -50,12 +44,8 @@ matrix:
 before_install:
   - pip install --upgrade setuptools pip
 install:
-  - git clone https://github.com/MozillaSecurity/ffpuppet.git
-  - python -m pip install -e ffpuppet
-  - git clone https://github.com/MozillaSecurity/lithium.git
-  - python -m pip install -e lithium
   - python -m pip install -e .[all]
 before_script:
   - pip install --upgrade pytest pytest-mock pytest-pylint pytest-cov codecov
 script:
-  - python -m pytest grizzly
+  - python -m pytest -v
