[ci] Use lithum master

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,8 @@ matrix:
     - os: windows
 before_install:
   - pip install --upgrade setuptools pip
+  - git clone https://github.com/MozillaSecurity/lithium.git
+  - python -m pip install -e lithium
 install:
   - python -m pip install -e .[all]
 before_script:
