--- a/.travis.yml
+++ b/.travis.yml
@@ -50,4 +50,4 @@ install:
 before_script:
   - pip install --upgrade pytest pytest-mock pytest-pylint pytest-cov codecov
 script:
-  - python -m pytest -v
+  - python -m pytest -v grizzly loki sapphire
