--- a/tox.ini
+++ b/tox.ini
@@ -2,4 +2,10 @@
 max-line-length = 110
 
 [pytest]
-python_classes=
+addopts =
+	-v
+	--cache-clear
+	--cov .
+	--cov-config .coveragerc
+	--cov-report term-missing
+	--disable-warnings
