--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: xenial
+dist: bionic
 sudo: false
 cache: pip
 language: python
@@ -7,40 +7,25 @@ python:
   - 3.5
   - 3.6
   - 3.7
-  - 3.8-dev
+  - 3.8
 matrix:
   include:
     - os: osx
       language: generic
       python: 2.7
     - os: osx
-      language: sh
-      python: 3.7
-      before_install:
-        - brew update
-        - brew upgrade python
-        - python3 -m venv venv
-        - source venv/bin/activate
+      osx_image: xcode11.2  # Python 3.7.4 running on macOS 10.14.4
+      language: shell       # 'language: python' is an error on Travis CI macOS
     - os: windows
-      language: sh
-      python: 2.7
+      language: shell
       before_install:
         - choco install python2
-        - export PATH="/c/Python27:/c/Python27/Scripts:$PATH"
-        - python -m pip install --upgrade pip wheel
+      env: PATH=/c/Python27:/c/Python27/Scripts:$PATH
     - os: windows
-      language: sh
-      python: 3.7
+      language: shell
       before_install:
-        - choco install python3
-        - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
-        - python -m pip install --upgrade pip wheel
-  allow_failures:
-    - os: linux
-      python: 3.8-dev
-    - os: osx
-      python: 3.7
-    - os: windows
+        - choco install python --version 3.8.0
+      env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
 before_install:
   - pip install --upgrade setuptools pip
 install:
