--- a/.travis.yml
+++ b/.travis.yml
@@ -11,17 +11,20 @@ python:
 matrix:
   include:
     - os: osx
-      language: generic
       python: 2.7
+      language: generic
     - os: osx
+      python: 3.7
       osx_image: xcode11.2  # Python 3.7.4 running on macOS 10.14.4
       language: shell       # 'language: python' is an error on Travis CI macOS
     - os: windows
+      python: 2.7
       language: shell
       before_install:
         - choco install python2
       env: PATH=/c/Python27:/c/Python27/Scripts:$PATH
     - os: windows
+      python: 3.8
       language: shell
       before_install:
         - choco install python --version 3.8.0
