Add configuration for running tests with tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,42 @@
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+
+[coverage:run]
+omit =
+    */test_*.py
+    grizzly/adapters/*/__init__.py
+    setup.py
+    dist/*
+    .tox/*
+    .egg/*
+
 [flake8]
 max-line-length = 110
+exclude =
+    .git
+    dist
+    .tox
 
 [pytest]
 addopts =
-	-v
-	--cache-clear
-	--cov .
-	--cov-config .coveragerc
-	--cov-report term-missing
-	--disable-warnings
+    -v
+    --cache-clear
+    --cov .
+    --cov-report term-missing
+filterwarnings =
+    ignore:cannot collect test class 'Test.*' because it has a __init__ constructor:pytest.PytestCollectionWarning
+    ignore:Using or importing the ABCs:DeprecationWarning:botocore
+
+[testenv]
+commands = pytest -v --cache-clear --cov="{toxinidir}" --cov-report term-missing --basetemp="{envtmpdir}" {posargs}
+extras =
+    all
+    test
+usedevelop = true
+
+[tox]
+envlist = py27,py35,py36,py37,py38
+minversion = 3.2
+skip_missing_interpreters = true
+tox_pip_extensions_ext_venv_update = true
