[ci] Add more coverage exclusions

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,12 @@
 [coverage:report]
 exclude_lines =
+    if __name__ == .__main__.:
+    @abc.abstract*
     pragma: no cover
 
 [coverage:run]
 omit =
+    */__main__.py
     */test_*.py
     grizzly/adapters/*/__init__.py
     setup.py
