--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [coverage:report]
 exclude_lines =
     if __name__ == .__main__.:
-    @abc.abstract*
+    @(abc.)?abstract*
     pragma: no cover
 
 [coverage:run]
