[adb] Add support for geckoview-config.yaml

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ install_requires =
     lithium-reducer >= 0.5.3
     prefpicker >= 1.1.0
     psutil >= 4.4.0
+    pyyaml
 packages =
     grizzly
     grizzly.adapter
