Initial rewrite of grizzly.reduce

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ exclude_lines =
 omit =
     */__main__.py
     */test_*.py
+    */conftest.py
     grizzly/adapters/*/__init__.py
     setup.py
     dist/*
@@ -33,7 +34,7 @@ filterwarnings =
 log_level = DEBUG
 
 [testenv]
-commands = pytest -v --cache-clear --cov="{toxinidir}" --cov-report term-missing --basetemp="{envtmpdir}" {posargs}
+commands = pytest -o addopts= -v --cache-clear --cov="{toxinidir}" --cov-report term-missing --basetemp="{envtmpdir}" {posargs}
 extras =
     all
     test
