--- a/.pylintrc
+++ b/.pylintrc
@@ -1,7 +1,9 @@
 [MESSAGES CONTROL]
 disable=
     duplicate-code,
+    fixme,
     missing-docstring,
+    super-with-arguments,
     too-few-public-methods,
     too-many-arguments,
     too-many-branches,
