[tests] Run pytest with '--log-level DEBUG'

--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,7 @@ addopts =
     --cache-clear
     --cov .
     --cov-report term-missing
+    --log-level DEBUG
 filterwarnings =
     ignore:cannot collect test class 'Test.*' because it has a __init__ constructor:pytest.PytestCollectionWarning
     ignore:Using or importing the ABCs:DeprecationWarning:botocore
