[ci] Update tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -27,10 +27,10 @@ addopts =
     --cache-clear
     --cov .
     --cov-report term-missing
-    --log-level DEBUG
 filterwarnings =
     ignore:cannot collect test class 'Test.*' because it has a __init__ constructor:pytest.PytestCollectionWarning
     ignore:Using or importing the ABCs:DeprecationWarning:botocore
+log_level = DEBUG
 
 [testenv]
 commands = pytest -v --cache-clear --cov="{toxinidir}" --cov-report term-missing --basetemp="{envtmpdir}" {posargs}
@@ -40,7 +40,7 @@ extras =
 usedevelop = true
 
 [tox]
-envlist = py27,py35,py36,py37,py38
-minversion = 3.2
+envlist = py35,py36,py37,py38
+minversion = 3.5
 skip_missing_interpreters = true
 tox_pip_extensions_ext_venv_update = true
