Remove Python 3.5 support

--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,7 @@ extras =
 usedevelop = true
 
 [tox]
-envlist = py35,py36,py37,py38,py39
-minversion = 3.5
+envlist = py36,py37,py38,py39
+minversion = 3.6
 skip_missing_interpreters = true
 tox_pip_extensions_ext_venv_update = true
