Use tox for tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,67 @@
 [metadata]
-description-file = README.md
+author = Tyson Smith
+author_email = twsmith@mozilla.com
+classifiers =
+    Intended Audience :: Developers
+    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
+    Programming Language :: Python :: 3
+    Topic :: Security
+    Topic :: Software Development :: Testing
+description = A framework for developing and running browser fuzzers
+keywords = firefox framework fuzz fuzzing test testing
+license = MPL 2.0
+long_description = file: README.md
+long_description_content_type = text/markdown
+maintainer = Mozilla Fuzzing Team
+maintainer_email = fuzzing@mozilla.com
+name = grizzly-framework
+url = https://github.com/MozillaSecurity/grizzly
 
-[bdist_wheel]
-universal=1
+[options]
+include_package_data = True
+install_requires =
+    fasteners
+    ffpuppet
+    FuzzManager
+    lithium-reducer >= 0.5
+    prefpicker
+    psutil >= 4.4.0
+packages =
+    grizzly
+    grizzly.adapters
+    grizzly.adapters.NoOpAdapter
+    grizzly.common
+    grizzly.reduce
+    grizzly.reduce.strategies
+    grizzly.replay
+    grizzly.target
+    loki
+    sapphire
+python_requires = >=3.6
+zip_safe = False
+
+[options.entry_points]
+console_scripts =
+    grizzly.status = grizzly.common.status_reporter:main
+grizzly_targets =
+    ffpuppet = grizzly.target.puppet_target:PuppetTarget
+grizzly_reduce_strategies =
+    attrs = grizzly.reduce.strategies.lithium:MinimizeAttrs
+    chars = grizzly.reduce.strategies.lithium:MinimizeChars
+    check = grizzly.reduce.strategies.lithium:Check
+    collapsebraces = grizzly.reduce.strategies.lithium:CollapseEmptyBraces
+    cssbeautify = grizzly.reduce.strategies.beautify:CSSBeautify
+    jsbeautify = grizzly.reduce.strategies.beautify:JSBeautify
+    jschars = grizzly.reduce.strategies.lithium:MinimizeJSChars
+    lines = grizzly.reduce.strategies.lithium:MinimizeLines
+    list = grizzly.reduce.strategies.testcases:MinimizeTestcaseList
+
+[options.extras_require]
+dev =
+    pre-commit
+    tox
+reduce =
+    cssbeautifier
+    jsbeautifier
+s3 =
+    boto3
