--- a/tox.ini
+++ b/tox.ini
@@ -1,47 +1,66 @@
-[coverage:report]
-exclude_lines =
-    if __name__ == .__main__.:
-    @(abc.)?abstract*
-    pragma: no cover
-
-[coverage:run]
-omit =
-    */__main__.py
-    */test_*.py
-    */conftest.py
-    grizzly/adapters/*/__init__.py
-    setup.py
-    dist/*
-    .tox/*
-    .egg/*
-
-[flake8]
-max-line-length = 110
-exclude =
-    .git
-    dist
-    .tox
-
-[pytest]
-addopts =
-    -v
-    --cache-clear
-    --cov .
-    --cov-report term-missing
-filterwarnings =
-    ignore:cannot collect test class 'Test.*' because it has a __init__ constructor:pytest.PytestCollectionWarning
-    ignore:Using or importing the ABCs:DeprecationWarning:botocore
-log_level = DEBUG
-
-[testenv]
-commands = pytest -o addopts= -v --cache-clear --cov="{toxinidir}" --cov-report term-missing --basetemp="{envtmpdir}" {posargs}
-extras =
-    all
-    test
-usedevelop = true
-
 [tox]
-envlist = py36,py37,py38,py39
-minversion = 3.6
+envlist = py{36,37,38,39} #,lint
 skip_missing_interpreters = true
 tox_pip_extensions_ext_venv_update = true
+
+[testenv]
+commands = pytest -v --cache-clear --cov="{toxinidir}" --cov-config="{toxinidir}/pyproject.toml" --cov-report term-missing --basetemp="{envtmpdir}" {posargs}
+deps =
+    pytest
+    pytest-cov
+    pytest-mock
+passenv =
+    BUILD_CACHE
+    CI
+    CODECOV_*
+    TOXENV
+    TRAVIS
+    TRAVIS_*
+    TWINE_*
+usedevelop = true
+
+[testenv:codecov]
+commands =
+    codecov
+deps =
+    codecov
+    coverage[toml]
+skip_install = true
+
+#[testenv:lint]
+#allowlist_externals =
+#    bash
+#commands =
+#    isort {toxinidir}
+#    black {toxinidir}
+#    codespell {toxinidir} --skip=".git,.tox,htmlcov,results"
+#    pylint {toxinidir}/grizzly
+#    pylint {toxinidir}/loki
+#    pylint {toxinidir}/sapphire
+#    flake8 {toxinidir}
+#deps =
+#    black
+#    codespell
+#    flake8
+#    isort
+#    pylint
+#usedevelop = true
+
+[testenv:pypi]
+commands =
+    python setup.py sdist bdist_wheel
+    twine upload --skip-existing dist/*
+deps =
+    setuptools>=43
+    setuptools_scm[toml]>=3.4
+    twine
+    wheel
+skip_install = true
+
+[flake8]
+extend-ignore = E203
+per-file-ignores =
+    */__init__.py: F401
+max-line-length = 88
+show-source = true
+statistics = true
