--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36,37,38,39} #,lint
+envlist = py{36,37,38,39},lint
 skip_missing_interpreters = true
 tox_pip_extensions_ext_venv_update = true
 
@@ -27,24 +27,24 @@ deps =
     coverage[toml]
 skip_install = true
 
-#[testenv:lint]
-#allowlist_externals =
-#    bash
-#commands =
-#    isort {toxinidir}
+[testenv:lint]
+allowlist_externals =
+    bash
+commands =
+    isort {toxinidir}
 #    black {toxinidir}
 #    codespell {toxinidir} --skip=".git,.tox,htmlcov,results"
 #    pylint {toxinidir}/grizzly
 #    pylint {toxinidir}/loki
 #    pylint {toxinidir}/sapphire
 #    flake8 {toxinidir}
-#deps =
-#    black
-#    codespell
-#    flake8
-#    isort
-#    pylint
-#usedevelop = true
+deps =
+    black
+    codespell
+    flake8
+    isort
+    pylint
+usedevelop = true
 
 [testenv:pypi]
 commands =
