--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,10 @@ allowlist_externals =
 commands =
     isort {toxinidir}
 #    black {toxinidir}
-#    codespell {toxinidir} --skip=".git,.tox,htmlcov,results"
+    # codespell trips over the regex in 'sapphire/worker.py' saying 'sHTTP ==> https'
+    # https://github.com/codespell-project/codespell/issues/1774
+    # ignoring it is broken so we need to ignore the file
+    codespell --skip=".git,.tox,htmlcov,results,./sapphire/worker.py" {toxinidir}
 #    pylint {toxinidir}/grizzly
 #    pylint {toxinidir}/loki
 #    pylint {toxinidir}/sapphire
