--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ allowlist_externals =
     bash
 commands =
     isort {toxinidir}
-#    black {toxinidir}
+    black {toxinidir}
     # codespell trips over the regex in 'sapphire/worker.py' saying 'sHTTP ==> https'
     # https://github.com/codespell-project/codespell/issues/1774
     # ignoring it is broken so we need to ignore the file
