--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ commands =
 #    pylint {toxinidir}/grizzly
 #    pylint {toxinidir}/loki
 #    pylint {toxinidir}/sapphire
-#    flake8 {toxinidir}
+    flake8 {toxinidir}
 deps =
     black
     codespell
