--- a/tox.ini
+++ b/tox.ini
@@ -37,9 +37,9 @@ commands =
     # https://github.com/codespell-project/codespell/issues/1774
     # ignoring it is broken so we need to ignore the file
     codespell --skip=".git,.tox,htmlcov,results,./sapphire/worker.py" {toxinidir}
-#    pylint {toxinidir}/grizzly
-#    pylint {toxinidir}/loki
-#    pylint {toxinidir}/sapphire
+    pylint {toxinidir}/grizzly
+    pylint {toxinidir}/loki
+    pylint {toxinidir}/sapphire
     flake8 {toxinidir}
 deps =
     black
