Make Adapters plug-ins
* Use plug-in code for both Adapters and Targets
* Update 'no-op' Adapter

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,8 +30,7 @@ install_requires =
     psutil >= 4.4.0
 packages =
     grizzly
-    grizzly.adapters
-    grizzly.adapters.NoOpAdapter
+    grizzly.adapter
     grizzly.common
     grizzly.reduce
     grizzly.reduce.strategies
@@ -45,6 +44,8 @@ zip_safe = False
 [options.entry_points]
 console_scripts =
     grizzly.status = grizzly.common.status_reporter:main
+grizzly_adapters =
+    no-op = grizzly.adapter.no_op_adapter:NoOpAdapter
 grizzly_targets =
     ffpuppet = grizzly.target.puppet_target:PuppetTarget
 grizzly_reduce_strategies =
