[tests] Update coverage exclusion list

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ omit = [
 [tool.coverage.report]
 exclude_lines = [
     "@(abc.)?abstract*",
-    "except ImportError:",
+    "except ImportError(.*):",
     "if __name__ == .__main__.:",
     "pragma: no cover",
 ]
