--- a/tox.ini
+++ b/tox.ini
@@ -14,11 +14,13 @@ extras =
 passenv =
     BUILD_CACHE
     CI
+    CI_*
     CODECOV_*
     TOXENV
     TRAVIS
     TRAVIS_*
     TWINE_*
+    VCS_*
 usedevelop = true
 
 [testenv:codecov]
@@ -29,12 +31,19 @@ deps =
     coverage[toml]
 skip_install = true
 
+[testenv:precommit]
+commands =
+    pre-commit run -a
+deps =
+    pre-commit
+skip_install = true
+
 [testenv:lint]
 allowlist_externals =
     bash
 commands =
-    isort {toxinidir}
-    black {toxinidir}
+    isort --check-only {toxinidir}
+    black --check {toxinidir}
     # codespell trips over the regex in 'sapphire/worker.py' saying 'sHTTP ==> https'
     # https://github.com/codespell-project/codespell/issues/1774
     # ignoring it is broken so we need to ignore the file
