Update FFPuppet support

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ include_package_data = True
 install_requires =
     cssbeautifier
     fasteners
-    ffpuppet
+    ffpuppet >= 0.8.0
     FuzzManager
     jsbeautifier
     lithium-reducer >= 0.5
