--- a/tox.ini
+++ b/tox.ini
@@ -31,32 +31,17 @@ deps =
     coverage[toml]
 skip_install = true
 
-[testenv:precommit]
+[testenv:lint]
 commands =
-    pre-commit run -a
+    pre-commit run -a {posargs}
 deps =
     pre-commit
 skip_install = true
 
-[testenv:lint]
-allowlist_externals =
-    bash
+[testenv:pylint]
 commands =
-    isort --check-only {toxinidir}
-    black --check {toxinidir}
-    # codespell trips over the regex in 'sapphire/worker.py' saying 'sHTTP ==> https'
-    # https://github.com/codespell-project/codespell/issues/1774
-    # ignoring it is broken so we need to ignore the file
-    codespell --skip=".git,.tox,htmlcov,results,./sapphire/worker.py" {toxinidir}
-    pylint {toxinidir}/grizzly
-    pylint {toxinidir}/loki
-    pylint {toxinidir}/sapphire
-    flake8 {toxinidir}
+    pylint {posargs}
 deps =
-    black
-    codespell
-    flake8
-    isort
     pylint==2.8.3
 usedevelop = true
 
