Add example FeedbackAdapter

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,7 @@ zip_safe = False
 console_scripts =
     grizzly.status = grizzly.common.status_reporter:main
 grizzly_adapters =
+    feedback = grizzly.adapter.feedback_example:FeedbackAdapter
     no-op = grizzly.adapter.no_op_adapter:NoOpAdapter
 grizzly_targets =
     ffpuppet = grizzly.target.puppet_target:PuppetTarget
