added domato adapter

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ console_scripts =
     grizzly.status = grizzly.common.status_reporter:main
 grizzly_adapters =
     no-op = grizzly.adapter.no_op_adapter:NoOpAdapter
+    domato = grizzly.adapter.domato_adapter:DomatoAdapter
 grizzly_targets =
     ffpuppet = grizzly.target.puppet_target:PuppetTarget
 grizzly_reduce_strategies =
