Use new PrefPicker API

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ install_requires =
     FuzzManager
     jsbeautifier
     lithium-reducer >= 0.5.3
-    prefpicker
+    prefpicker >= 1.1.0
     psutil >= 4.4.0
 packages =
     grizzly
