[ci] Update flake8 ignore list

--- a/tox.ini
+++ b/tox.ini
@@ -57,9 +57,11 @@ deps =
 skip_install = true
 
 [flake8]
-extend-ignore = E203
-per-file-ignores =
-    */__init__.py: F401
+ignore =
+    E203  # black compat
+    W503  # black compat
+enable =
+    W504  # black compat
 max-line-length = 88
 show-source = true
 statistics = true
