--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,7 @@ repos:
     rev: 22.1.0
     hooks:
       - id: black
+        additional_dependencies: ['click==8.0.4']
   - repo: https://gitlab.com/pycqa/flake8
     rev: 4.0.1
     hooks:
