--- a/.github/workflows/taskcluster-pr.yml
+++ b/.github/workflows/taskcluster-pr.yml
@@ -2,7 +2,7 @@ name: taskcluster PR worker
 on: [pull_request]
 jobs:
   osx-tc-worker-pr:
-    runs-on: macos-10.15
+    runs-on: macos-latest
     env:
       TASKCLUSTER_ACCESS_TOKEN: ${{ secrets.TASKCLUSTER_ACCESS_TOKEN }}
       TC_WORKER_ID: "gh-grizzly-pr-${{ github.run_id }}-${{ github.run_attempt }}"
