--- a/.github/workflows/taskcluster-push.yml
+++ b/.github/workflows/taskcluster-push.yml
@@ -2,7 +2,7 @@ name: taskcluster push worker
 on: [push]
 jobs:
   osx-tc-worker-push:
-    runs-on: macos-10.15
+    runs-on: macos-latest
     env:
       TASKCLUSTER_ACCESS_TOKEN: ${{ secrets.TASKCLUSTER_ACCESS_TOKEN }}
       TC_WORKER_ID: "gh-grizzly-push-${{ github.run_id }}-${{ github.run_attempt }}"
