--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,11 @@ repos:
     rev: v1.3.0
     hooks:
       - id: yesqa
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.38.2
+    hooks:
+      - id: pyupgrade
+        args: ['--py37-plus']
   - repo: https://github.com/ambv/black
     rev: 22.6.0
     hooks:
