Fix flake8 ignores for 6.0.0 (cannot update until 3.7 dropped)

--- a/tox.ini
+++ b/tox.ini
@@ -55,10 +55,11 @@ deps =
 skip_install = true
 
 [flake8]
+# E203, W503, and W504 are all black compat
 ignore =
-    E203  # black compat
-    W503  # black compat
+    E203
+    W503
 enable =
-    W504  # black compat
+    W504
 max-line-length = 88
 show-source = true
