[ci] Fix pytest command in tox.ini
This fixes breakage on tox >= 4.

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ skip_missing_interpreters = true
 tox_pip_extensions_ext_venv_update = true
 
 [testenv]
-commands = pytest -v --cache-clear --cov="{toxinidir}" --cov-config="{toxinidir}/pyproject.toml" --cov-report term-missing {posargs}
+commands = pytest -v --cache-clear --cov={toxinidir} --cov-config={toxinidir}/pyproject.toml --cov-report=term-missing {posargs}
 deps =
     pytest
     pytest-cov
