--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ url = https://github.com/MozillaSecurity/grizzly
 [options]
 include_package_data = True
 install_requires =
+    aioquic==1.2.0
     bugsy
     cryptography
     cssbeautifier
@@ -39,6 +40,7 @@ packages =
     grizzly.reduce.strategies
     grizzly.replay
     grizzly.target
+    grizzly.services
     loki
     sapphire
 python_requires = >=3.9
