--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ tox_pip_extensions_ext_venv_update = true
 commands = pytest -v --cache-clear --cov={toxinidir} --cov-config={toxinidir}/pyproject.toml --cov-report=term-missing {posargs}
 deps =
     pytest
+    pytest-asyncio
     pytest-cov
     pytest-mock
 passenv =
