--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ omit = [
     "*/resources/*",
     "*/.tox/*",
     "*/.egg/*",
+    "*/wpt_h3_server/*",
 ]
 
 [tool.coverage.report]
@@ -64,6 +65,7 @@ log_level = "DEBUG"
 [tool.ruff]
 fix = true
 target-version = "py39"
+exclude = ["src/grizzly/services/webtransport/wpt_h3_server"]
 
 [tool.ruff.lint]
 select = [
