[ci] Update pre-commit hooks

--- a/tox.ini
+++ b/tox.ini
@@ -39,9 +39,9 @@ skip_install = true
 
 [testenv:pylint]
 commands =
-    pylint {posargs}
+    pylint -j 0 {posargs}
 deps =
-    pylint==2.15.10
+    pylint==2.17.4
 usedevelop = true
 
 [testenv:pypi]
