[ci] Include only expected events and actions in taskcluster.yml

--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -94,7 +94,10 @@ tasks:
                 key: password
 
   in:
-    $if: 'tasks_for in ["github-push", "github-release"] || (tasks_for == "github-pull-request" && event["action"] in ["opened", "reopened", "synchronize"])'
+    $if: >
+      (tasks_for == "github-push")
+      || (tasks_for == "github-pull-request" && event["action"] in ["opened", "reopened", "synchronize"])
+      || (tasks_for == "github-release" && event["action"] in ["published"])
     then:
       - created: {$fromNow: ''}
         deadline: {$fromNow: '1 hour'}
@@ -128,3 +131,4 @@ tasks:
           description: Schedule CI tasks for ${project_name}
           owner: twsmith@mozilla.com
           source: https://github.com/MozillaSecurity/grizzly
+    else: []
