--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ url = https://github.com/MozillaSecurity/grizzly
 [options]
 include_package_data = True
 install_requires =
+    bugsy
     cryptography
     cssbeautifier
     fasteners
